# doom-2016-dualsense-mod

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-installer.yml  trigger-build-from-ui.yml
installer/: DOOMDSModInstaller.iss
installer/files/: dualsense-mod.ini  launch-service.vbs
src/: Config.cpp  Config.h  DualsenseMod.cpp  DualsenseMod.h  Logger.h  dllmain.cpp
src/rva/: RVA.h
src/rva/sscan/: Pattern.h
